Fixing broken styles on previous bullshit removal

--- a/app/less/greenmine.less
+++ b/app/less/greenmine.less
@@ -2162,7 +2162,10 @@ body.login {
                 color: #CC0000;
             }
         }
-
+        .issue-options {
+            padding: 4px;
+            width: 120px;
+        }
         .issue-assignedto {
             padding: 10px;
         }
